2008-05-24  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/native_effects/PicmixEffect.cpp: add stub for a new
	effect.

2008-05-23  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/linux/VcamLinux.cpp: video capture disabled for now,
	while compiling to distribute with a codec-stripped version
	of the ffmpeg libraries.


2008-05-22  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/gui/gui.cpp: deal with string issues in version 2.6
	of wxwidgets

	* src/modules/CMakeLists.txt: inaccurate path if YARP 
	compiled with an out-of-source build.

2008-04-19  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/PackageInfo.cmake: factor out packaging verbiage.

2008-04-18  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/gui/cmdline.cpp: give help message when called with no
	arguments, rather than running with defaults (which are not
	usually very interesting).

	* src/common/location.cpp: rudimentary logic for finding media
	files when ucanvcam is downloaded as a binary package for Linux.

	* src/gui/gui.cpp: label inputs, outputs, effects

	* src/win32/VcamWin.cpp: fix up possible deadlock

	* src/win32/ShmemImage.h: factor out image-over-shmem
	logic.

2008-04-15  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/modules/CMakeLists.txt: explicitly list the
	ffmpeg driver in YARP - needed on Linux for video4linux or
	firewire access.

2008-04-14  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/gui/cmdline.cpp: begin a command-line version of
	ucanvcam, for use without a GUI.

	* configure: add dummy configure script that calls cmake.

	* src/common/Effect.h: (and many other files) made class
	names and filenames less obscure.

2008-04-12  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* CMakeLists.txt: improved NSIS packaging, version bump.

2008-04-10  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* CMakeLists.txt: version bump, windows build actually works
	well for the first time; assumes 320x240 RGB at the moment 
	though...
